--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,11 @@
 .list-group-item {
-  line-height: 2.5;
+    line-height: 2.5;
+}
+
+.imgFilter {
+    filter: brightness(0.8);
+}
+
+.navbar-inverse {
+    background-color: #121d40;
 }
