--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,5 @@
+
+
 .list-group-item {
     line-height: 2.5;
 }
@@ -9,3 +11,11 @@
 .navbar-inverse {
     background-color: #121d40;
 }
+
+.navbar {
+    border-bottom: 3px solid red;
+  }
+
+  h1 .dash {
+      color: aqua;
+  }
