--- a/views/menu.html
+++ b/views/menu.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/carousel.css">
+    <link rel="stylesheet" href="/styles/styles.css">
+    <title>Impatient T-shirts</title>
+</head>
 <header>
     <nav class="navbar fixed-top navbar-dark navbar-expand-md navbar-inverse text-white">
         <a class="text-white navbar-brand" href="/">
@@ -27,14 +41,13 @@
                     <i class="text-warning fas fa-shopping-cart">
                     </i> Shopping Cart <i style="color:yellow" id="cart_n"></i>
                 </a>
-                <a href="/admin" class="nav-link text-white">
+                <a href="/signup" class="nav-link text-white">
                     <i class="far fa-user"></i> Vendor Sign In
                 </a>
             </form>
         </div>
     </nav>
 </header>
-
 <main role="main">
     <div class="carousel slide" data-ride="carousel" id="myCarousel">
         <ol class="carousel-indicators">
@@ -50,7 +63,7 @@
                         <h1>Impatient T-shirts</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At pariatur molestiae magnam
                             sapiente dolor illum alias ad iusto dolore possimus?</p>
-                        <p><a href="#" role="butoon" class="btn btn-primary btn-lg">Products</a></p>
+                        <p><a href="#" role="button" class="btn btn-primary btn-lg">Products</a></p>
                     </div>
                 </div>
             </div>
@@ -61,7 +74,7 @@
                         <h1>Impatient T-shirts</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At pariatur molestiae magnam
                             sapiente dolor illum alias ad iusto dolore possimus?</p>
-                        <p><a href="#" role="butoon" class="btn btn-primary btn-lg">Products</a></p>
+                        <p><a href="#" role="button" class="btn btn-primary btn-lg">Products</a></p>
                     </div>
                 </div>
             </div>
@@ -72,21 +85,20 @@
                         <h1>Impatient T-shirts</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At pariatur molestiae magnam
                             sapiente dolor illum alias ad iusto dolore possimus?</p>
-                        <p><a href="#" role="butoon" class="btn btn-primary btn-lg">Products</a></p>
+                        <p><a href="#" role="button" class="btn btn-primary btn-lg">Products</a></p>
                     </div>
                 </div>
             </div>
         </div>
         <a style="z-index:101;" class="carousel-control-prev" role="button" data-slide="prev" href="#myCarousel">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previus</span>
+            <span class="sr-only">Previous</span>
         </a>
         <a style="z-index:101;" class="carousel-control-next" role="button" data-slide="next" href="#myCarousel">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
     </div>
-
     <div class="container marketing">
         <br>
         <h2 id="women">Womens</h2>
@@ -102,3 +114,4 @@
     </div>
 </main>
 <script src="/js/main.js"></script>
+</html>
